--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
-  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&display=swap&subset=cyrillic" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700%7CPT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
@@ -14,14 +13,16 @@
       <div class="container">
         <a class="site-logo" href="#"><img src="img/logo.svg" alt="Логотип компании Техномарт" width="109" height="19"></a>
         <form class="header-search" action="https://echo.htmlacademy.ru" method="post">
-          <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17"><path fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/></svg>
-          <label class="visually-hidden" for="search">Поиск</label>
           <input type="search" id="search" name="search" placeholder="Поиск:">
+          <label class="header-search-label" for="search">
+            <span class="visually-hidden">Поиск</span>
+            <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17"><path fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/></svg>
+          </label>
           <button class="visually-hidden" type="submit"><span>Искать</span></button>
         </form>
         <div class="shop-menu">
-          <a class="shop-menu-bookmark" href="#">Закладки: 0</a>
-          <a class="shop-menu-cart" href="#">Корзина: 0</a>
+          <a class="shop-menu-link bookmark-link" href="#">Закладки: 0</a>
+          <a class="shop-menu-link cart-link" href="#">Корзина: 0</a>
           <a class="button button-checkout" href="#">Оформить заказ</a>
         </div>
       </div>
@@ -33,7 +34,7 @@
           <a class="header-tel" href="tel:+78125550555" aria-label="Позвоните нам">+7 (812) 555-05-55</a>
           <p class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         </div>
-        <div class="user-menu user-menu-main">
+        <div class="user-menu">
           <a class="button-profile button-login" href="#">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17"><path fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z"/><path fill="#c5c5c5" d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z"/></svg>
             Войти</a>
@@ -72,7 +73,7 @@
             <a class="button button-promo" href="#">На все случаи</a>
           </div>
           <div class="slider">
-            <div>
+            <div class="slider-inner">
               <div class="slide first-slide slide-active">
                 <h3>Дрели</h3>
                 <p>Соседям на радость!</p>
@@ -283,11 +284,11 @@
           <li class="social-button fb-button"><a href="#"><span class="visually-hidden">Фейсбук</span></a></li>
           <li class="social-button insta-button"><a href="#"><span class="visually-hidden">Инстаграм</span></a></li>
         </ul>
-        <p class="feedback">
+        <p class="footer-bottom-contacts">
           Обратная связь:
           <a class="academy" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
         </p>
-        <p class="designed">
+        <p class="footer-bottom-contacts">
           Разработано —
           <a class="academy" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
         </p>
