Личный проект: завершаем вёрстку

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <div class="header-bottom">
       <div class="container">
-        <p class="shop-info">Интернет-магазин строительных материалов и инструментов для ремонта</p>
+        <p class="shop-info">Интернет-магазин строительных материалов и&nbsp;инструментов для ремонта</p>
         <div class="header-contacts">
           <a class="header-tel" href="tel:+78125550555" aria-label="Позвоните нам">+7 (812) 555-05-55</a>
           <p class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
@@ -300,11 +300,11 @@
     <h2 class="visually-hidden">Форма обратной связи</h2>
     <form action="https://echo.htmlacademy.ru" method="post">
       <div class="feedback-top modal-wrapper">
-        <div class="feedback-name">
+        <div class="feedback-top-block">
           <label for="name">Ваше имя:</label>
           <input type="text" id="name" name="name" placeholder="Имя Фамилия">
         </div>
-        <div class="feedback-mail">
+        <div class="feedback-top-block">
           <label for="mail">Ваш e-mail:</label>
           <input type="email" id="mail" name="mail" placeholder="email@example.com">
         </div>
