--- a/catalog.html
+++ b/catalog.html
@@ -29,7 +29,7 @@
       </div>
       <div class="header-bottom">
         <div class="container">
-          <p class="shop-info">Интернет-магазин строительных материалов и инструментов для ремонта</p>
+          <p class="shop-info">Интернет-магазин строительных материалов и&nbsp;инструментов для ремонта</p>
           <div class="header-contacts">
             <a class="header-tel" href="tel:+78125550555" aria-label="Позвоните нам">+7 (812) 555-05-55</a>
             <p class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
@@ -336,12 +336,13 @@
       </div>
     </footer>
 
-    <section class="modal cart-add modal">
+    <section class="modal cart-add">
       <h2 class="cart-add-header">Товар добавлен в корзину!</h2>
       <div class="cart-bottom">
         <a class="button button-details" href="#">Оформить заказ</a>
         <button class="button button-details" type="button">Продолжить покупки</button>
       </div>
+      <button class="modal-close" type="button"><span class="visually-hidden">Закрыть окно</span></button>
     </section>
   </body>
 </html>
