--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header class="main-header">
     <div class="header-top">
       <div class="container">
-        <a class="site-logo" href="#"><img src="img/logo.svg" alt="Логотип компании Техномарт" width="109" height="19"></a>
+        <a class="site-logo"><img src="img/logo.svg" alt="Логотип компании Техномарт" width="109" height="19"></a>
         <form class="header-search" action="https://echo.htmlacademy.ru" method="post">
           <input type="search" id="search" name="search" placeholder="Поиск:">
           <label class="header-search-label" for="search">
@@ -45,7 +45,7 @@
     <nav class="site-nav">
       <div class="container">
         <ul class="main-nav">
-          <li><a href="#">Главная</a></li>
+          <li><a>Главная</a></li>
           <li><a href="#">Компания</a></li>
           <li><a href="catalog.html">Каталог</a></li>
           <li><a href="#">Новости</a></li>
@@ -250,7 +250,7 @@
     <div class="footer-top">
       <div class="container">
         <div class="footer-top-left">
-          <a class="site-logo footer-logo" href="#"><img src="img/logo.svg" alt="Логотип компании Техномарт" width="138" height="23"></a>
+          <a class="site-logo footer-logo"><img src="img/logo.svg" alt="Логотип компании Техномарт" width="138" height="23"></a>
           <p class="footer-address">
             г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
           </p>
@@ -258,9 +258,9 @@
         </div>
         <div class="footer-top-right">
           <ul class="footer-nav">
-            <li><a href="#">Компания</a></li>
+            <li><a>Компания</a></li>
             <li><a href="#">Новости</a></li>
-            <li><a href="#">Каталог</a></li>
+            <li><a href="catalog.html">Каталог</a></li>
             <li><a href="#">Доставка</a></li>
             <li><a href="#">Контакты</a></li>
           </ul>
