--- a/catalog.html
+++ b/catalog.html
@@ -290,7 +290,7 @@
       <div class="footer-top">
         <div class="container">
           <div class="footer-top-left">
-            <a class="site-logo footer-logo" href="#"><img src="img/logo.svg" alt="Логотип компании Техномарт" width="138" height="23"></a>
+            <a class="site-logo footer-logo" href="index.html"><img src="img/logo.svg" alt="Логотип компании Техномарт" width="138" height="23"></a>
             <p class="footer-address">
               г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
             </p>
@@ -298,7 +298,7 @@
           </div>
           <div class="footer-top-right">
             <ul class="footer-nav">
-              <li><a href="#">Компания</a></li>
+              <li><a href="index.html">Компания</a></li>
               <li><a href="#">Новости</a></li>
               <li><a href="#">Каталог</a></li>
               <li><a href="#">Доставка</a></li>
