--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
@@ -7,6 +8,7 @@
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
+
 <body>
   <header class="main-header">
     <div class="header-top">
@@ -16,7 +18,10 @@
           <input type="search" id="search" name="search" placeholder="Поиск:">
           <label class="header-search-label" for="search">
             <span class="visually-hidden">Поиск</span>
-            <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17"><path fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
+              <path fill="#ffffff"
+                d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z" />
+              </svg>
           </label>
           <button class="visually-hidden" type="submit"><span>Искать</span></button>
         </form>
@@ -36,7 +41,9 @@
         </div>
         <div class="user-menu">
           <a class="button-profile button-login" href="#">
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17"><path fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z"/><path fill="#c5c5c5" d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z"/></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17">
+              <path fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z" />
+              <path fill="#c5c5c5" d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z" /></svg>
             Войти</a>
           <a class="button-profile button-registration" href="#">Регистрация</a>
         </div>
@@ -168,16 +175,16 @@
           <h2 class="title">Популярные производители:</h2>
           <a class="button button-details" href="#">Все производители</a>
         </div>
-          <ul class="brand-list">
-            <li><a class="brand-link" href="#"><img src="img/brand-bosch.png" alt="Bosch" width="126" height="37"></a></li>
-            <li><a class="brand-link" href="#"><img src="img/brand-makita.png" alt="Makita" width="123" height="40"></a></li>
-            <li><a class="brand-link" href="#"><img src="img/brand-dewalt.png" alt="DeWALT" width="146" height="44"></a></li>
-            <li><a class="brand-link" href="#"><img src="img/brand-interskol.png" alt="Интерскол" width="200" height="88"></a></li>
-            <li><a class="brand-link" href="#"><img src="img/brand-hitachi.png" alt="Hitachi" width="169" height="31"></a></li>
-            <li><a class="brand-link" href="#"><img src="img/brand-lg.png" alt="LG" width="121" height="73"></a></li>
-            <li><a class="brand-link" href="#"><img src="img/brand-aeg.png" alt="AEG" width="151" height="96"></a></li>
-            <li><a class="brand-link" href="#"><img src="img/brand-metabo.png" alt="Metabo" width="204" height="69"></a></li>
-          </ul>
+        <ul class="brand-list">
+          <li><a class="brand-link" href="#"><img src="img/brand-bosch.png" alt="Bosch" width="126" height="37"></a></li>
+          <li><a class="brand-link" href="#"><img src="img/brand-makita.png" alt="Makita" width="123" height="40"></a></li>
+          <li><a class="brand-link" href="#"><img src="img/brand-dewalt.png" alt="DeWALT" width="146" height="44"></a></li>
+          <li><a class="brand-link" href="#"><img src="img/brand-interskol.png" alt="Интерскол" width="200" height="88"></a></li>
+          <li><a class="brand-link" href="#"><img src="img/brand-hitachi.png" alt="Hitachi" width="169" height="31"></a></li>
+          <li><a class="brand-link" href="#"><img src="img/brand-lg.png" alt="LG" width="121" height="73"></a></li>
+          <li><a class="brand-link" href="#"><img src="img/brand-aeg.png" alt="AEG" width="151" height="96"></a></li>
+          <li><a class="brand-link" href="#"><img src="img/brand-metabo.png" alt="Metabo" width="204" height="69"></a></li>
+        </ul>
       </div>
     </section>
     <!-- С Е Р В И С Ы -->
@@ -215,8 +222,8 @@
               Кредитные консультанты придут вам на помощь.</p>
             <a class="button button-details" href="#">Отправить заявку</a>
           </div>
-                </div>
         </div>
+      </div>
     </section>
     <!-- О  К О М П А Н И И -->
     <div class="company-block container">
