--- a/catalog.html
+++ b/catalog.html
@@ -252,8 +252,8 @@
               <div class="buy-popup">
                 <a class="button item-buy" href="#">Купить</a>
                 <a class="button item-bookmark" href="#">В закладки</a>
-                <div class="new-flag">New</div>
               </div>
+              <div class="new-flag">New</div>
             </article>
             <article class="cat-item cat-item-inner">
               <img src="img/b6000.jpg" alt="Перфоратор Bosch BFG 6000" width="218" height="170">
@@ -292,7 +292,8 @@
         <h2 class="title sub-title">Пара слов о перфораторах</h2>
         <p>Перфоратор — универсальный строительный инструмент.
           Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>
-          Существуют электромеханические и пневматические перфораторы.
+        </p>
+        <p>Существуют электромеханические и пневматические перфораторы.
           Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка.
           В ассортиментном ряду есть выбор «трехрежимников»:
           в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
