+ попапы + анимация их появления

--- a/catalog.html
+++ b/catalog.html
@@ -354,10 +354,13 @@
     <h2 class="cart-add-header">Товар добавлен в корзину!</h2>
     <div class="cart-bottom">
       <a class="button button-details" href="#">Оформить заказ</a>
-      <button class="button button-details" type="button">Продолжить покупки</button>
+      <button class="button button-details button-continue" type="button">Продолжить покупки</button>
     </div>
     <button class="modal-close" type="button"><span class="visually-hidden">Закрыть окно</span></button>
   </section>
+
+  <script src="js/script.js"></script>
+
 </body>
 
 </html>
