--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         <h2 class="title sub-title">Контакты</h2>
         <p>Вы можете забрать товар сами, заехав в наш офис!</p>
         <a class="contacts-map" href="#"><img src="img/map.jpg" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8" width="300" height="158"></a>
-        <a class="button button-details" href="#">Заблудились? Напишите нам!</a>
+        <a class="button button-details feedback-button" href="#">Заблудились? Напишите нам!</a>
       </section>
     </div>
   </main>
@@ -303,6 +303,15 @@
     </div>
   </footer>
 
+  <section class="modal cart-add">
+    <h2 class="cart-add-header">Товар добавлен в корзину!</h2>
+    <div class="cart-bottom">
+      <a class="button button-details" href="#">Оформить заказ</a>
+      <button class="button button-details button-continue" type="button">Продолжить покупки</button>
+    </div>
+    <button class="modal-close" type="button"><span class="visually-hidden">Закрыть окно</span></button>
+  </section>
+
   <section class="modal feedback-modal">
     <h2 class="visually-hidden">Форма обратной связи</h2>
     <form action="https://echo.htmlacademy.ru" method="post">
@@ -329,9 +338,15 @@
 
   <section class="modal map-big-modal">
     <h2 class="visually-hidden">Карта проезда</h2>
-    <img src="img/map-popup.jpg" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8" width="940" height="446">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533252!2d30.320858716405265!3d59.938716481876185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1583055905917!5m2!1sru!2sru" width="940" height="466" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+    <p>
+      <img src="img/map-popup.jpg" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8" width="940" height="446">
+    </p>
     <button class="modal-close" type="button"><span class="visually-hidden">Закрыть окно</span></button>
   </section>
+
+  <script src="js/script.js"></script>
+
 </body>
 
 </html>
