+ минимизированные css и js

--- a/catalog.html
+++ b/catalog.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт - Каталог - Перфораторы</title>
   <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700%7CPT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
-  <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/normalize-min.css" rel="stylesheet">
+  <link href="css/style-min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -88,7 +88,7 @@
       <div class="inner-wrapper">
         <section class="sidebar">
           <h2 class="filter-title">Фильтр:</h2>
-          <form class="filter" action="echo.htmlacademy.ru" method="get">
+          <form class="filter" action="https://echo.htmlacademy.ru" method="get">
             <fieldset class="filter-price">
               <legend>Цена:</legend>
               <div class="range-controls">
@@ -275,14 +275,14 @@
                 <a class="button item-bookmark" href="#">В закладки</a>
               </div>
             </article>
-            <div>
-              <ul class="pagination">
-                <li><a class="active-page" href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a class="next-page" href="#">Следующая</a></li>
-              </ul>
-            </div>
+          </div>
+          <div class="pagination-wrapper">
+            <ul class="pagination">
+              <li><a class="active-page" href="#">1</a></li>
+              <li><a href="#">2</a></li>
+              <li><a href="#">3</a></li>
+              <li><a class="next-page" href="#">Следующая</a></li>
+            </ul>
           </div>
         </section>
       </div>
@@ -359,7 +359,7 @@
     <button class="modal-close" type="button"><span class="visually-hidden">Закрыть окно</span></button>
   </section>
 
-  <script src="js/script.js"></script>
+  <script src="js/script-min.js"></script>
 
 </body>
 
